[project]
name = "detectionator"
version = "0.0.1"
requires-python = ">=3.11"
dynamic = ["dependencies", "dev-dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
dev-dependencies = { file = ["requirements-dev.in"] }

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py311"
